# gx2gl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.py
include/GLES2/: gl2.h  gl2ext.h  gl2platform.h
include/Platform/: WiiU_Log.hpp
include/gl/: gl.h
include/gx2gl/: sdl_bridge.h
include/vulkan/: vulkan.h
src/core/: gl_buffer.cpp  gl_buffer.h  gl_context.cpp  gl_context.h  gl_draw.cpp  gl_draw.h  gl_framebuffer.cpp  gl_framebuffer.h  gl_get.cpp  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h  gl_vao.cpp  gl_vao.h  gx2gl_cafeglsl.cpp  gx2gl_proc.cpp  gx2gl_proc_table.inc  gx2gl_sdl_bridge.cpp  gx2gl_shader_compat.cpp  main.cpp
src/endian/: endian.h
src/mem/: gl_mem.cpp  gl_mem.h
src/state/: gl_state.cpp  gl_state.h
src/vk/: gx2vk_cmd.cpp  gx2vk_core.cpp  gx2vk_descriptor.cpp  gx2vk_internal.h  gx2vk_memory.cpp  gx2vk_pipeline.cpp  gx2vk_shader.cpp
tests/: gles2_compile.cpp  test_main.cpp  vk13_smoke.cpp
tests/pc/: CMakeLists.txt  desktop_wgl_platform.cpp  desktop_wgl_platform.h  test_main.cpp
tools/: generate_desktop_gl_bindings.py
